feat: updates for cyso

--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -13,8 +13,7 @@ dependencies:
   - name: cluster
     version: 0.3.1
     repository: https://cloudnative-pg.github.io/charts
-    condition: pgcluster.enabled
-    alias: pgcluster
+    condition: cluster.enabled
   - name: keycloak
     version: 24.3.0
     repository: "@bitnami"
@@ -75,4 +74,10 @@ dependencies:
     version: 1.0.46
     repository: "@zac"
     condition: zac.enabled
+  - name: nfs-server-provisioner
+    repository: "@nfs-ganesha-server-and-external-provisioner"
+    version: 1.8.0
+  - name: traefik
+    repository: "@traefik"
+    version: 35.4.0
 
