Modified server domain name in values.yaml (#83)

--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -99,7 +99,7 @@ grafana:
       disable_signout_menu: false
       allow_sign_up: true
     server:
-      domain: "https://logs.test.nl/"
+      domain: "logs.test.nl/"
       enforce_domain: true
       root_url: "https://logs.test.nl/"
     metrics:
@@ -114,6 +114,12 @@ grafana:
       enabled: false     # Ensure anonymous access is disabled
       hide_version: true # Add this to explicitly hide version for anonymous users
       
+    # -- Git Sync for Grafana dashboards
+    feature_toggles:
+      provisioning: true
+      kubernetesClientDashboardsFolders: true
+      kubernetesDashboards: true
+      grafanaAPIServerEnsureKubectlAccess: true   
   image:
     pullPolicy: IfNotPresent
     pullSecrets: []
