feat: fix brp personen mock deployment

--- a/charts/podiumd/templates/api-proxy-deployment.yaml
+++ b/charts/podiumd/templates/api-proxy-deployment.yaml
@@ -14,6 +14,8 @@ spec:
     metadata:
       labels:
         app: {{ default "api-proxy" .Values.apiproxy.nameOverride }}
+      annotations:
+        checksum/configmap-nginx: {{ include (print $.Template.BasePath "/api-proxy-configmap.yaml") . | sha256sum }}
     spec:
       {{- with .Values.apiproxy.imagePullSecrets }}
       imagePullSecrets:
