--- a/charts/brp-personen-mock/templates/deployment.yaml
+++ b/charts/brp-personen-mock/templates/deployment.yaml
@@ -3,19 +3,16 @@ kind: Deployment
 metadata:
   name: brp-personen-mock
   labels:
-    app.kubernetes.io/instance: podiumd
-    app.kubernetes.io/name: brp-personen-mock
+    {{- include "brppersonenmock.labels" . | nindent 4 }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/instance: podiumd
-      app.kubernetes.io/name: brp-personen-mock
+      {{- include "brppersonenmock.labels" . | nindent 6 }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/instance: podiumd
-        app.kubernetes.io/name: brp-personen-mock
+        {{- include "brppersonenmock.labels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
