changes for brp personen mock & monitoring+logging (#102)
fixes brp-personen-mock deployment labels so that the values from the
helper are used properly

--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -99,7 +99,7 @@ grafana:
       disable_signout_menu: false
       allow_sign_up: true
     server:
-      domain: "logs.test.nl/"
+      domain: "logs.test.nl"
       enforce_domain: true
       root_url: "https://logs.test.nl/"
     metrics:
@@ -119,7 +119,7 @@ grafana:
       provisioning: true
       kubernetesClientDashboardsFolders: true
       kubernetesDashboards: true
-      grafanaAPIServerEnsureKubectlAccess: true   
+      grafanaAPIServerEnsureKubectlAccess: true
   image:
     pullPolicy: IfNotPresent
     pullSecrets: []
