--- a/charts/podiumd/templates/frontend-deployment.yaml
+++ b/charts/podiumd/templates/frontend-deployment.yaml
@@ -53,6 +53,14 @@ spec:
           env:
             - name: ASPNETCORE_ENVIRONMENT
               value: {{ .Values.kiss.frontend.aspNetCoreEnvironment | quote }}
+          {{- if .Values.kiss.frontend.extraVolumeMounts }}
+          volumeMounts:
+            {{- include "kiss-frontend.tplvalues.render" ( dict "value" .Values.kiss.frontend.extraVolumeMounts "context" $ ) | nindent 12 }}
+          {{- end }}
+          {{- if .Values.kiss.frontend.extraVolumes }}
+          volumes:
+            {{- include "kiss-frontend.tplvalues.render" ( dict "value" .Values.kiss.frontend.extraVolumes "context" $ ) | nindent 8 }}
+          {{- end }}
 
       {{- with .Values.kiss.nodeSelector }}
       nodeSelector:
