--- a/charts/podiumd/templates/sync-domain-cron-job.yaml
+++ b/charts/podiumd/templates/sync-domain-cron-job.yaml
@@ -1,14 +1,14 @@
 {{- if .Values.kiss.enabled -}}
-{{- if .Values.kiss.sync.vac.enabled | default true }}
+{{- if .Values.kiss.sync.domain.enabled | default true }}
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: podiumd-sync-vac-cron-job
+  name: podiumd-sync-domain-cron-job
   labels:
     {{- include "podiumd.labels" . | nindent 4 }}
-    app.kubernetes.io/name: {{ include "podiumd.name" . }}-sync-vac-cron-job
+    app.kubernetes.io/name: {{ include "podiumd.name" . }}-sync-domain-cron-job
 spec:
-  schedule: {{ .Values.kiss.sync.vac.schedule | quote }}
+  schedule: {{ .Values.kiss.sync.domain.schedule | quote }}
   concurrencyPolicy: Forbid
   successfulJobsHistoryLimit: {{ .Values.kiss.sync.successfulJobsHistoryLimit }}
   failedJobsHistoryLimit: {{ .Values.kiss.sync.failedJobsHistoryLimit }}
@@ -16,17 +16,18 @@ spec:
     metadata:
       labels:
         {{- include "podiumd.labels" . | nindent 8 }}
-        app.kubernetes.io/name: {{ include "podiumd.name" . }}-sync-vac-cron-job
+        app.kubernetes.io/name: {{ include "podiumd.name" . }}-sync-domain-cron-job
     spec:
       template:
         spec:
           restartPolicy: Never
           containers:
-            - name: sync-vac
+            - name: sync-domain
               image: "{{ .Values.kiss.sync.image.repository }}:{{ .Values.kiss.sync.image.tag }}"
               imagePullPolicy: {{ .Values.kiss.sync.image.pullPolicy }}
               args:
-                - vac
+                - domain
+                - {{ .Values.kiss.sync.domain.url | quote }}
               envFrom:
                 - configMapRef:
                     name: podiumd-sync-config
