--- a/charts/podiumd/templates/sync-kennisbank-cron-job.yaml
+++ b/charts/podiumd/templates/sync-kennisbank-cron-job.yaml
@@ -1,4 +1,5 @@
 {{- if .Values.kiss.enabled -}}
+{{- if .Values.kiss.sync.kennisbank.enabled | default true }}
 apiVersion: batch/v1
 kind: CronJob
 metadata:
@@ -7,7 +8,7 @@ metadata:
     {{- include "podiumd.labels" . | nindent 4 }}
     app.kubernetes.io/name: {{ include "podiumd.name" . }}-sync-kennisbank-cron-job
 spec:
-  schedule: {{ .Values.kiss.sync.schedule.kennisbank | quote }}
+  schedule: {{ .Values.kiss.sync.kennisbank.schedule | quote }}
   concurrencyPolicy: Forbid
   successfulJobsHistoryLimit: {{ .Values.kiss.sync.successfulJobsHistoryLimit }}
   failedJobsHistoryLimit: {{ .Values.kiss.sync.failedJobsHistoryLimit }}
@@ -33,4 +34,5 @@ spec:
           nodeSelector:
             {{- toYaml . | nindent 12 }}
           {{- end }}
-  {{- end }}
+{{- end }}
+{{- end }}
