contact managementApiKey in helm values

--- a/charts/podiumd/templates/frontend-secret.yaml
+++ b/charts/podiumd/templates/frontend-secret.yaml
@@ -30,6 +30,7 @@ stringData:
   MEDEWERKER_OBJECTEN_CLIENT_ID: {{ .Values.kiss.adapter.clientId | quote }}
   MEDEWERKER_OBJECTEN_CLIENT_SECRET: {{ .Values.kiss.adapter.secret | quote }}
   MEDEWERKER_OBJECTTYPES_TOKEN: {{ .Values.kiss.objecttypen.token | quote }}
+  MANAGEMENTINFORMATIE_API_KEY: {{ .Values.kiss.managementApiKey | quote }}
   OIDC_CLIENT_ID: {{ .Values.kiss.oidc.clientId | quote }}
   OIDC_CLIENT_SECRET: {{ .Values.kiss.oidc.secret | quote }}
   POSTGRES_PASSWORD: {{ .Values.kiss.database.password | quote }}
