--- a/charts/monitoring-logging/values.yaml
+++ b/charts/monitoring-logging/values.yaml
@@ -123,11 +123,28 @@ grafana:
   image:
     pullPolicy: IfNotPresent
     pullSecrets: []
-    registry: docker.io
-    repository: grafana/grafana
+    repository: acrprodmgmt.azurecr.io/grafana
     sha: ""
     tag: ""
-    
+
+  initChownData:
+    image:
+      pullPolicy: IfNotPresent
+      repository: acrprodmgmt.azurecr.io/busybox
+      tag: 1.31.1  
+
+  imageRenderer:
+    image:
+      pullPolicy: Always
+      pullSecrets: []
+      repository: acrprodmgmt.azurecr.io/grafana-image-renderer
+      sha: ""
+      tag: latest
+  testFramework:
+    image:
+      repository: acrprodmgmt.azurecr.io/bats
+      tag: v1.4.1
+    imagePullPolicy: IfNotPresent
   persistence:
     enabled: true
     storageClassName: "managed-csi" # Specify your storage class
@@ -149,7 +166,7 @@ prometheus:
     image:
       digest: ""
       pullPolicy: IfNotPresent
-      repository: quay.io/prometheus/prometheus
+      repository: acrprodmgmt.azurecr.io/prometheus
       tag: ""
     persistentVolume:
       enabled: true
@@ -169,19 +186,31 @@ prometheus:
   prometheus-node-exporter:
     nodeSelector:
       agentpool: userpool
+    kubeRBACProxy:
+      image:
+        pullPolicy: IfNotPresent
+        repository: acrprodmgmt.azurecr.io/kube-rbac-proxy
+        sha: ""
+        tag: v0.19.1
   prometheus-pushgateway:
     nodeSelector:
       agentpool: userpool
   kube-state-metrics:
     nodeSelector:
       agentpool: userpool
+  configmapReload:
+    prometheus:
+      image:
+        digest: ""
+        pullPolicy: IfNotPresent
+        repository: acrprodmgmt.azurecr.io/prometheus-config-reloader
+        tag: v0.83.0
 
 promtail:
   enabled: true
   image:
     pullPolicy: IfNotPresent
-    registry: docker.io
-    repository: grafana/promtail
+    repository: acrprodmgmt.azurecr.io/promtail
     tag: ""
   nodeSelector:
     agentpool: userpool
@@ -197,23 +226,53 @@ promtail:
     limits:
       cpu: 100m
       memory: 256Mi
-
+  sidecar:
+    image:
+      pullPolicy: IfNotPresent
+      repository: acrprodmgmt.azurecr.io/configmap-reload
+      tag: v0.12.0
 loki:
   enabled: true
   deploymentMode: Distributed
   lokiCanary:
     enabled: false
+  memcached:
+    image:
+      pullPolicy: IfNotPresent
+      repository: acrprodmgmt.azurecr.io/memcached
+      tag: 1.6.38-alpine
+  memcachedExporter:
+    image:
+      pullPolicy: IfNotPresent
+      repository: acrprodmgmt.azurecr.io/memcached-exporter
+      tag: v0.15.2
+
   resultsCache:
     enabled: true
     defaultValidity: 6h
     nodeSelector:
       agentpool: userpool
+
+  sidecar:
+    image:
+      pullPolicy: IfNotPresent
+      repository: acrprodmgmt.azurecr.io/k8s-sidecar
+      sha: ""
+      tag: 1.30.3
+
+
   chunksCache:
     enabled: true
     defaultValidity: 6h # Shorter TTL = fresher results
     allocatedMemory: 1024
     nodeSelector:
       agentpool: userpool
+  enterprise:
+    image:
+      digest: null
+      pullPolicy: IfNotPresent
+      repository: acrprodmgmt.azurecr.io/enterprise-logs
+      tag: 3.5.1
   monitoring:
     selfMonitoring:
       enabled: false
@@ -250,6 +309,11 @@ loki:
   gateway:
     nodeSelector:
       agentpool: userpool
+    image:
+      digest: null
+      pullPolicy: IfNotPresent
+      repository: acrprodmgmt.azurecr.io/nginx-unprivileged
+      tag: 1.28-alpine
   ingester:
     replicas: 3
     nodeSelector:
@@ -266,6 +330,11 @@ loki:
           agentpool: userpool
   test:
     enabled: false
+    image:
+      digest: null
+      pullPolicy: IfNotPresent
+      repository: acrprodmgmt.azurecr.io/loki-helm-test
+      tag: ewelch-distributed-helm-chart-17db5ee
   backend:
     replicas: 0
   read:
@@ -276,7 +345,6 @@ loki:
     replicas: 1
     nodeSelector:
       agentpool: userpool
-    
   loki:
     auth_enabled: false
     schemaConfig:
@@ -344,6 +412,14 @@ loki:
       
     frontend:
       max_outstanding_per_tenant: 6144
+    
+    image:
+      digest: null
+      pullPolicy: IfNotPresent
+      repository: acrprodmgmt.azurecr.io/loki
+      tag: ""
+    
+
   minio:
     enabled: true
     persistence:
@@ -351,3 +427,7 @@ loki:
       size: 20Gi
     nodeSelector:
       agentpool: userpool
+    image:
+      pullPolicy: IfNotPresent
+      repository: acrprodmgmt.azurecr.io/minio
+      tag: RELEASE.2024-12-18T13-15-44Z
